--- a/app/src/main/res/drawable/camera720_icon_video_recording_selector.xml
+++ b/app/src/main/res/drawable/camera720_icon_video_recording_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/camera720_icon_video_recording_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/camera720_icon_video_recording_disable" android:state_enabled="false" />
     <item android:drawable="@drawable/camera720_icon_video_recording_normal" />
 </selector>
