--- a/app/src/main/res/layout/fragment_home_mine_info.xml
+++ b/app/src/main/res/layout/fragment_home_mine_info.xml
@@ -8,27 +8,37 @@
     android:clickable="true"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/fLayout_top_bar_container"
+    <!--<FrameLayout-->
+        <!--android:id="@+id/fLayout_top_bar_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/color_0ba8cf">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/iv_home_mine_personal_back"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="@dimen/y48"-->
+            <!--android:drawableLeft="@drawable/nav_tab_back_selector"-->
+            <!--android:drawablePadding="@dimen/x15"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:paddingLeft="@dimen/x15"-->
+            <!--android:text="@string/Tap3_Friends_UserInfo"-->
+            <!--android:textColor="@color/color_white"-->
+            <!--android:textSize="@dimen/sp18" />-->
+    <!--</FrameLayout>-->
+
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        hunt:ct_left_title="@string/Tap3_Friends_UserInfo"
+        hunt:ct_left_title_color="@color/color_white"
+        android:textSize="@dimen/sp18"
+        android:id="@+id/custom_toolbar"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/color_0ba8cf">
-
-        <TextView
-            android:id="@+id/iv_home_mine_personal_back"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:drawableLeft="@drawable/nav_tab_back_selector"
-            android:drawablePadding="@dimen/x15"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/x15"
-            android:text="@string/Tap3_Friends_UserInfo"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
-
-    </FrameLayout>
+        android:layout_height="wrap_content"/>
 
     <ScrollView
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -267,6 +277,7 @@
                     android:layout_marginEnd="@dimen/x30"
                     android:layout_marginStart="@dimen/x30"
                     android:layout_marginTop="@dimen/y10"
+                    android:layout_marginBottom="@dimen/y42"
                     android:background="@drawable/long_btn_bg_shape_white"
                     android:gravity="center"
                     android:padding="@dimen/x10"
