--- a/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_scan_add.xml
@@ -9,35 +9,45 @@
     android:orientation="vertical"
     tools:context=".n.view.mine.MineFriendScanAddFragment">
 
-    <FrameLayout
-        android:id="@+id/rl_home_mine_relativesandfriends_scan_add"
-        android:background="#0BA8CF"
+    <!--<FrameLayout-->
+        <!--android:id="@+id/rl_home_mine_relativesandfriends_scan_add"-->
+        <!--android:background="#0BA8CF"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+
+            <!--<ImageView-->
+                <!--android:id="@+id/iv_home_mine_friends_scan_add_back"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:clickable="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:padding="@dimen/x15"-->
+                <!--android:src="@drawable/nav_tab_back_selector" />-->
+
+            <!--<TextView-->
+                <!--android:layout_toRightOf="@id/iv_home_mine_friends_scan_add_back"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/y48"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:text="@string/Tap3_FriendsAdd_QR"-->
+                <!--android:textColor="@color/color_white"-->
+                <!--android:textSize="@dimen/sp18" />-->
+        <!--</RelativeLayout>-->
+    <!--</FrameLayout>-->
+
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        hunt:ct_left_title="@string/Tap3_FriendsAdd_QR"
+        hunt:ct_left_title_color="@color/color_white"
+        android:textSize="@dimen/sp18"
+        android:id="@+id/custom_toolbar"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_home_mine_friends_scan_add_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:layout_centerVertical="true"
-                android:padding="@dimen/x15"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:layout_toRightOf="@id/iv_home_mine_friends_scan_add_back"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y48"
-                android:gravity="center_vertical"
-                android:text="@string/Tap3_FriendsAdd_QR"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-        </RelativeLayout>
-    </FrameLayout>
+        android:layout_height="wrap_content"/>
 
     <FrameLayout
         android:layout_width="match_parent"
