--- a/app/src/main/res/layout/toolbar_720_pan.xml
+++ b/app/src/main/res/layout/toolbar_720_pan.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000eee"
+    android:layout_height="@dimen/y48"
     tools:context="com.cylan.jiafeigou.n.view.panorama.Pan720FullFragment">
 
     <TextView
@@ -12,7 +11,6 @@
         android:layout_centerVertical="true"
         android:drawableStart="@drawable/nav_icon_close_white"
         android:gravity="center_vertical"
-        android:text="Nihao"
         android:textColor="@color/color_white"
         android:textSize="@dimen/sp18" />
 
@@ -21,9 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:drawableStart="@drawable/nav_icon_close_white"
         android:gravity="center_vertical"
-        android:text="Nihao"
         android:textColor="@color/color_white"
         android:textSize="@dimen/sp22" />
 
