--- a/app/src/main/res/layout/item_panorama_logo_empty.xml
+++ b/app/src/main/res/layout/item_panorama_logo_empty.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_panorama_logo_selected"
     android:layout_width="@dimen/y69"
     android:layout_height="@dimen/y69"
     android:layout_marginStart="@dimen/y18">
