--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -65,13 +65,16 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="@dimen/y48"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x1"
+                    android:layout_marginStart="@dimen/x20"
+                    android:layout_marginEnd="@dimen/x1"
                     android:hint="@string/EMAIL_1"
                     android:background="@null"
                     android:maxLength="65"
                     android:singleLine="true"
-                    android:inputType="textVisiblePassword"
+                    android:cursorVisible="true"
+                    android:textCursorDrawable="@drawable/edittext_cursor_shape"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp16" />
 
