--- a/app/src/main/res/layout/activity_bind_cam.xml
+++ b/app/src/main/res/layout/activity_bind_cam.xml
@@ -28,6 +28,7 @@
         android:textSize="@dimen/sp26" />
 
     <TextView
+        android:id="@+id/tv_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_main_content"
@@ -38,13 +39,15 @@
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp16" />
 
-    <android.support.v4.widget.Space
-        android:id="@+id/s_place_holder"
-        android:layout_width="@dimen/x1"
-        android:layout_height="@dimen/y1"
-        android:layout_centerInParent="true" />
+    <!--<android.support.v4.widget.Space-->
+        <!--android:id="@+id/s_place_holder"-->
+        <!--android:layout_width="@dimen/x1"-->
+        <!--android:layout_height="@dimen/y1"-->
+        <!--android:layout_centerInParent="true" />-->
 
     <FrameLayout
+        android:layout_marginTop="@dimen/y57"
+        android:layout_below="@+id/tv_sub_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
