--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -76,56 +76,14 @@
             android:textSize="@dimen/sp15" />
     </LinearLayout>
 
-    <RelativeLayout
+    <com.cylan.jiafeigou.widget.wheel.WonderIndicatorWheelView
         android:id="@+id/fLayout_cam_message_list_timeline"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y80"
+        android:layout_height="@dimen/y55"
         android:layout_alignParentBottom="true"
-        android:visibility="invisible">
+        android:layout_marginTop="@dimen/y5"
+        android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/tv_time_line_pop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/time_line_pop"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/sp11" />
-
-
-        <RelativeLayout
-            android:id="@+id/rLayout_time_line_hot"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/tv_time_line_pop"
-            android:layout_marginTop="@dimen/y5"
-            android:background="@color/color_f6f9fa">
-
-            <View
-                android:id="@+id/v_simple_38line"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y1"
-                android:background="@color/color_d2d2d2" />
-
-
-            <com.cylan.jiafeigou.widget.wheel.WonderIndicatorWheelView
-                android:id="@+id/wv_date_list_timeline"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y55"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@+id/v_simple_38line"
-                android:layout_marginTop="@dimen/y5" />
-
-            <View
-                android:layout_width="@dimen/x3"
-                android:layout_height="@dimen/y35"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:background="@color/color_36BDFF" />
-
-        </RelativeLayout>
-    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/fLayout_cam_msg_edit_bar"
