--- a/app/src/main/res/layout/fragment_camera_live.xml
+++ b/app/src/main/res/layout/fragment_camera_live.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rLayout_camera_live_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.cylan.jiafeigou.n.view.cam.CameraLiveFragment">
