--- a/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_friend_add_from_contact.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:clickable="true"
     android:background="@color/color_white"
@@ -18,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/x15"
+            android:layout_centerVertical="true"
             android:clickable="true"
             android:src="@drawable/nav_tab_back_selector" />
 
@@ -31,8 +33,18 @@
             android:textColorHint="#60ffffff"
             android:background="@null"
             android:textSize="@dimen/sp18" />
-
     </RelativeLayout>
+
+    <!--<com.cylan.jiafeigou.widget.CustomToolbar-->
+        <!--android:id="@+id/custom_toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--hunt:ct_background_color="@color/color_0ba8cf"-->
+        <!--hunt:ct_enable_shadow="false"-->
+        <!--hunt:ct_fit_system_window="true"-->
+        <!--hunt:ct_icon="@drawable/nav_icon_back_white"-->
+        <!--hunt:ct_left_title="@string/Tap3_Feedback"-->
+        <!--hunt:ct_left_title_color="@color/color_white" />-->
 
     <FrameLayout
         android:layout_width="match_parent"
