--- a/app/src/main/res/layout/fragment_home_mine_friends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends.xml
@@ -1,52 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/color_white"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/rl_home_mine_relativesandfriends"
-        android:background="#0BA8CF"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_home_mine_relativesandfriends_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/x15"
-                android:clickable="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:layout_toRightOf="@id/iv_home_mine_relativesandfriends_back"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y48"
-                android:text="@string/Tap3_Friends"
-                android:gravity="center_vertical"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-
-            <TextView
-                android:id="@+id/tv_home_mine_relativesandfriends_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:clickable="true"
-                android:padding="@dimen/x15"
-                android:text="@string/Tap3_FriendsAdd"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp14" />
-        </RelativeLayout>
-
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_right_title="@string/Tap3_FriendsAdd"
+        hunt:ct_right_title_color="@color/color_white"
+        hunt:ct_left_title="@string/Tap3_Friends"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
