--- a/app/src/main/res/layout/fragment_home_mine_friends_addfriends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends_addfriends.xml
@@ -12,46 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:background="#0BA8CF"
-            android:id="@+id/rl_home_mine_relativesandfriends"
+        <com.cylan.jiafeigou.widget.CustomToolbar
+            hunt:ct_left_title="@string/Tap3_FriendsAdd"
+            hunt:ct_left_title_color="@color/color_white"
+            android:textSize="@dimen/sp18"
+            hunt:ct_enable_shadow="false"
+            android:id="@+id/custom_toolbar"
+            hunt:ct_background_color="@color/color_0ba8cf"
+            hunt:ct_icon="@drawable/nav_icon_back_white"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:layout_centerVertical="true"
-                    android:id="@+id/iv_home_mine_relativesandfriends_add_back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/x15"
-                    android:clickable="true"
-                    android:src="@drawable/nav_tab_back_selector" />
-
-                <TextView
-                    android:gravity="center_vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y48"
-                    android:layout_marginLeft="@dimen/x48"
-                    android:text="@string/Tap3_FriendsAdd"
-                    android:textColor="@color/color_white"
-                    android:textSize="@dimen/sp18" />
-            </RelativeLayout>
-        </FrameLayout>
-
-        <!--<com.cylan.jiafeigou.widget.CustomToolbar-->
-            <!--hunt:ct_left_title="@string/Tap3_FriendsAdd"-->
-            <!--hunt:ct_left_title_color="@color/color_white"-->
-            <!--android:textSize="@dimen/sp18"-->
-            <!--hunt:ct_enable_shadow="true"-->
-            <!--android:id="@+id/custom_toolbar"-->
-            <!--hunt:ct_background_color="@color/color_0ba8cf"-->
-            <!--hunt:ct_icon="@drawable/nav_icon_back_white"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"/>-->
+            android:layout_height="wrap_content"/>
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
