--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -1,40 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/color_f9f9f9"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/fLayout_top_bar_container"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_0ba8cf">
-
-        <TextView
-            android:id="@+id/iv_home_mine_message_back"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:drawablePadding="@dimen/x15"
-            android:drawableLeft="@drawable/nav_tab_back_selector"
-            android:paddingLeft="@dimen/x15"
-            android:gravity="center_vertical"
-            android:text="@string/Tap1_Camera_Messages"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
-
-        <TextView
-            android:id="@+id/tv_home_mine_message_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:clickable="true"
-            android:padding="@dimen/x15"
-            android:text="@string/DELETE"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp14" />
-    </FrameLayout>
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_right_title="@string/DELETE"
+        hunt:ct_right_title_color="@color/color_white"
+        hunt:ct_left_title="@string/Tap1_Camera_Messages"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
