--- a/app/src/main/res/layout/fragment_mine_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_add_from_contact.xml
@@ -1,62 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white">
 
-    <FrameLayout
-        android:background="@color/color_0ba8cf"
-        android:id="@+id/rl_tab_bar_container"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_icon_right="@drawable/me_icon_finish_normal"
+        hunt:ct_left_title="@string/Tap3_FriendsAdd_SendButton"
+        hunt:ct_left_title_color="@color/color_white" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_mine_add_from_contact_back"
-                android:clickable="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/x15"
-                android:layout_centerVertical="true"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:layout_toRightOf="@id/iv_mine_add_from_contact_back"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:gravity="center_vertical"
-                android:text="发送请求"
-                android:textSize="@dimen/sp18"
-                android:textColor="@color/color_white" />
-
-            <ImageView
-                android:id="@+id/iv_mine_add_from_contact_send"
-                android:padding="@dimen/x15"
-                android:clickable="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/me_icon_finish_normal" />
-
-            <ImageView
-                android:visibility="gone"
-                android:id="@+id/iv_mine_add_from_contact_send_disable"
-                android:padding="@dimen/x15"
-                android:clickable="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/icon_finish_disable" />
-        </RelativeLayout>
-
-    </FrameLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
