--- a/app/src/main/res/layout/fragment_mine_device_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_device_share_manager.xml
@@ -1,41 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/color_white"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/rl_tab_bar_container"
-        android:background="@color/color_0ba8cf"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_centerVertical="true"
-                android:id="@+id/iv_home_mine_share_devices_manager_back"
-                android:clickable="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/x15"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:id="@+id/tv_home_mine_share_devices_name"
-                android:layout_toRightOf="@id/iv_home_mine_share_devices_manager_back"
-                android:singleLine="true"
-                android:gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:text="@string/EQUIPMENT_NAME"
-                android:textSize="@dimen/sp18"
-                android:textColor="@color/color_white" />
-        </RelativeLayout>
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_left_title="@string/EQUIPMENT_NAME"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
