--- a/app/src/main/res/layout/fragment_mine_help_suggestion.xml
+++ b/app/src/main/res/layout/fragment_mine_help_suggestion.xml
@@ -2,38 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_white"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/rl_home_mine_suggestion"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#0BA8CF">
-
-        <TextView
-            android:drawableLeft="@drawable/nav_tab_back_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:text="@string/FEEDBACK"
-            android:drawablePadding="@dimen/x15"
-            android:paddingLeft="@dimen/x15"
-            android:gravity="center_vertical"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
-
-        <TextView
-            android:id="@+id/tv_mine_help_suggestion_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:layout_gravity="end|center_vertical"
-            android:padding="@dimen/x15"
-            android:text="@string/Tap3_Feedback_Clear"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp14" />
-
-    </FrameLayout>
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_right_title="@string/Tap3_Feedback_Clear"
+        hunt:ct_right_title_color="@color/color_white"
+        hunt:ct_left_title="@string/FEEDBACK"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <include layout="@layout/layout_suggestion_recycleview_list" />
     <include layout="@layout/layout_suggestion_user_input" />
