--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -2,48 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_white"
     android:clickable="true"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/fLayout_top_bar_container"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_0ba8cf">
-
-        <TextView
-            android:drawableLeft="@drawable/nav_tab_back_selector"
-            android:id="@+id/tv_top_title"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y48"
-            android:gravity="center_vertical"
-            android:drawablePadding="@dimen/x15"
-            android:paddingLeft="@dimen/x15"
-            android:text="@string/Tap0_BindEmail"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/sp18" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_mailbox_bind"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:clickable="true"
-            android:padding="@dimen/x15"
-            android:src="@drawable/me_icon_finish_normal"
-            android:visibility="visible" />
-
-        <ImageView
-            android:id="@+id/iv_mine_personal_mailbox_bind_disable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|center_vertical"
-            android:clickable="true"
-            android:padding="@dimen/x15"
-            android:src="@drawable/icon_finish_disable"
-            android:visibility="gone" />
-    </FrameLayout>
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_icon_right="@drawable/me_icon_finish_normal"
+        hunt:ct_left_title="@string/Tap0_BindEmail"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
