--- a/app/src/main/res/layout/fragment_mine_share_to_friend.xml
+++ b/app/src/main/res/layout/fragment_mine_share_to_friend.xml
@@ -1,51 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/color_white"
     android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:background="#0BA8CF"
-        android:id="@+id/rl_mine_share_to_relative_friend"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_mine_share_to_relative_friend_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/x15"
-                android:layout_centerVertical="true"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:layout_toRightOf="@id/iv_mine_share_to_relative_friend_back"
-                android:gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y48"
-                android:text="@string/Tap3_ShareDevice_Friends"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-
-            <TextView
-                android:gravity="center_vertical"
-                android:id="@+id/tv_mine_share_to_relative_friend_true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:clickable="true"
-                android:padding="@dimen/x15"
-                android:text="确定（4/5）"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp14" />
-        </RelativeLayout>
-    </FrameLayout>
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_right_title="确定（4/5）"
+        hunt:ct_right_title_color="#d8d8d8"
+        hunt:ct_left_title="@string/Tap3_ShareDevice_Friends"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
