--- a/app/src/main/res/layout/fragment_set_remark_name.xml
+++ b/app/src/main/res/layout/fragment_set_remark_name.xml
@@ -2,50 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_white"
     android:clickable="true"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/rl_tab_bar_container"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_0ba8cf">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_top_bar_left_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:padding="@dimen/x15"
-                android:src="@drawable/nav_tab_back_selector" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:layout_toRightOf="@id/iv_top_bar_left_back"
-                android:gravity="center_vertical"
-                android:text="@string/Tap3_Friends_UserInfo_ModName"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-
-            <ImageView
-                android:id="@+id/iv_mine_set_remarkname_bind"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:padding="@dimen/x15"
-                android:src="@drawable/me_icon_finish_normal"
-                android:visibility="visible" />
-        </RelativeLayout>
-    </FrameLayout>
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_enable_shadow="false"
+        hunt:ct_fit_system_window="true"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_icon_right="@drawable/icon_finish_disable"
+        hunt:ct_left_title="@string/Tap3_Friends_UserInfo_ModName"
+        hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
