1.通讯录下获取多个邮箱地址 2.系统推送消息已读 3.非推送消息删除

--- a/app/src/main/res/layout/fragment_home_mine_friends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content">
             <!--添加请求-->
             <TextView
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:id="@+id/tv_add_request_title"
                 android:layout_marginTop="@dimen/y19"
                 android:layout_marginLeft="@dimen/x15"
