720摄像头拍照录像

--- a/app/src/main/res/drawable/media_seek_bar_drawable.xml
+++ b/app/src/main/res/drawable/media_seek_bar_drawable.xml
@@ -26,7 +26,7 @@
         </shape>
     </item>
     <!--<item-->
-    <!--android:dpMsgId="@android:dpMsgId/secondaryProgress"-->
+    <!--android:msgId="@android:msgId/secondaryProgress"-->
     <!--android:gravity="center_vertical|fill_horizontal">-->
     <!--<scale android:scaleWidth="100%">-->
     <!--<selector>-->
