--- a/app/src/main/res/layout/wonder_time_indicator.xml
+++ b/app/src/main/res/layout/wonder_time_indicator.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/wonder_item_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F7F8FA"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:gravity="center_horizontal">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/y1"
         android:background="@color/color_dde0e5" />
 
-    <TextView
-        android:id="@+id/wonder_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:textColor="#333333"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/wonder_item_indicator_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        android:padding="0dp" />
-</LinearLayout>
+        android:layout_gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/wonder_item_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp"
+            android:textColor="#333333"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/wonder_item_indicator_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:overScrollMode="never"
+            android:padding="0dp" />
+    </LinearLayout>
+</FrameLayout>
